# expense-settlement

./: .dockerignore  ADMINER.md  DOCKER.md  README.md  README_DEV.md  TESTING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  expense_settlement.db
backend/: .dockerignore  .env.dev  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  README_DEV.md  docker-compose.yml  pyproject.toml  run.sh
backend/src/app/: __init__.py  auth.py  config.py  database.py  db_wait.py  main.py  models.py  schemas.py
backend/src/app/routers/: auth.py  expenses.py  groups.py  users.py
backend/tests/: README.md  conftest.py  test_auth.py  test_expenses.py  test_groups.py  test_users.py
client-library/: .npmignore  README.md  README_TESTS.md  package-lock.json  package.json  vitest.config.ts
client-library/src/: client.ts  errors.ts  index.ts  token-storage.ts  types.ts
client-library/src/__tests__/: client.test.ts
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  README_E2E.md  README_TESTS.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/components/: navbar.test.tsx
frontend/__tests__/contexts/: auth-context.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/groups/: page.tsx
frontend/app/groups/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: navbar.tsx  protected-route.tsx
frontend/contexts/: auth-context.tsx
frontend/e2e/: auth.spec.ts
